# irispie

./: .gitignore  LICENCE  LICENSE  NOTICE  README.md  __init__.py  audi.py  audi_interface.py  d2s.py  databank.py  databanks.py  dates.py  dating.py  eqman.py  equations.py  evaluators.py  exceptions.py  ford.py  functions.py  incidence.py  metaford.py  model.py  models.py  parser.py  pyproject.toml  quantities.py  requirements  series.py  sources.py  sourcing.py  systems.py  types.py  vectors.py  wrongdoings.py
.github/workflows/: bump_version.py  make_edition.py  print_edition.py  print_mmp.py  print_version.py  publish-to-pypi.yml  sync-from-irispie.yml  test-and-deploy.yml  test-and-version.yml  test.yml
.obsidian/: app.json  appearance.json  core-plugins.json  workspace.json
.obsidian/snippets/: iris.css  no-embed-titles.css
aldi/: __init__.py  adaptations.py  differentiators.py  engines.py  express.py  finite_differentiators.py  invariators.py  maps.py
audi/: engines.py
dataman/: __init__.py  databanks.py  dataslabs.py  dates.py  exports.py  filters.py  imports.py  imports2.py  plotly.py  series.py  views.py
docs/: Ranger.md
docs/algorithms/: detach-unit-roots.md
docs/architecture/: Untitled.md
docs/milestones/: March-2023.md
docs/series/: example.py
evaluators/: accessories.py  evaluators.py~  plains.py  steadies.py
fords/: __init__.py  descriptors.py  simulators.py  solutions.py  systems.py
issues/19/: issue.py
jacobians/: descriptors.py
knowledge-base/architecture/: steady.canvas
knowledge_base/.obsidian/: app.json  workspace.json
knowledge_base/algorithms/: detach_unit_roots.md  stacked_time_system.md
knowledge_base/milestones/: March-2023.md
mixins/: userdata.py
models/: __init__.py  core.py  evaluators.py  facade.py  flags.py  ford.py  getters.py  invariants.py  simulations.py  sources.py  variants.py
parsers/: common.py  model.py  model_source_parser.py  preparser.py  pseudofunctions.py  substitutions.py
sandbox/: alpha.py  arip_test.py  beta.py  hawk.py  issue_12.py  jj.py  test.json  test.py  test.toml  test3.py  zzz.py
sandbox/zeries/: __init__.py  _conversions.py  _diffcums.py  _hp.py  _invariants.py  _movings.py  _plotly.py  _variants.py  _views.py  main.py
scripts/: bump_version.py
src/irispie/: 2  3  __init__.py  _docstring_template  attributes.py  contexts.py  dataslabs.py  dataslates.py  dates.py  equations.py  exceptions.py  ez_plotly.py  file_io.py  frames.py  has_invariant.py  has_variants.py  incidence.py  iter_printers.py  iter_variants.py  keywords.py  makers.py  namings.py  pages.py  plotly.py  plotly_wrap.py  portables.py  progress_bars.py  pyrightconfig.json  quantities.py  session  slatables.py  sources.py  tags  test.py  transforms.py  wrongdoings.py
test/: test_eqman.py
tests/: report.txt  specs
tests/backward_solver/: test.py
tests/chartpacks/: test_chartpacks.py  test_transforms.py
tests/context/: create.py  model.pkl  model.py  simulate.py  xxx.py
tests/databoxes/: test_basics.py
tests/databoxes_fixme/: test.csv  test_export_to_sheet.csv  test_export_to_sheet.py
tests/dataslates/: test_dataslates.py
tests/dates/: test_compact_format.py  test_encompassing_span.py  test_sdmx_format.py
tests/gimm/: create_model.py  glogc.m  glogd.m  glogp.m  model_functions.py  nested.py  run_test.py
tests/large_models/: linear_test.py  test.py  (+1 more)
(+298 files in other folders)
