[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "irispie"
version = "0.50.4"
description = "Macroeconomic modeling package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
keywords = [ "macroeconomics", "economics", "modeling", "simulation", "forecasting", "dsge",]
dependencies = [ "numpy >= 1.26", "scipy >= 1.13", "python-dateutil >= 2.9.0", "plotly >= 5.23", "parsimonious >= 0.10", "prettytable >= 3.10", "pandas >= 2.1.2", "dill >= 0.3.8", "requests >= 2.31.0", "wlogging >= 0.3.0",]
[[project.authors]]
name = "Jaromir Benes"
email = "jaromir.benes@gmail.com"

[project.urls]
Homepage = "https://github.com/iris-solutions-team/irispie"
Documentation = "https://iris-solutions-team.github.io/irispie-pages"
"Bug Tracker" = "https://github.com/iris-solutions-team/irispie/issues"
