[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "irispie"
version = "0.65.0"
description = "Macroeconomic modeling package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
keywords = [ "macroeconomics", "economics", "modeling", "simulation", "forecasting", "dsge",]
dependencies = [ "numpy >= 2.1", "scipy >= 1.14.1", "python-dateutil >= 2.9.0", "plotly >= 5.23", "Jinja2 >= 3.1.4", "parsimonious >= 0.10", "prettytable >= 3.10", "pandas >= 2.1.2", "dill >= 0.3.8", "requests >= 2.31.0", "neqs >= 0.8.0", "documark >= 0.4.0", "daqp >= 0.6.0",]
[[project.authors]]
name = "Jaromir Benes"
email = "jaromir.benes@gmail.com"

[project.urls]
Homepage = "https://github.com/iris-solutions-team/irispie"
Documentation = "https://iris-solutions-team.github.io/irispie-pages"
"Bug Tracker" = "https://github.com/iris-solutions-team/irispie/issues"
