[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project]
name = "irispie-de"
version = "0.71.11+de"
description = "Macroeconomic modeling package"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [ "Programming Language :: Python :: 3", "License :: Other/Proprietary License", "Operating System :: OS Independent",]
keywords = [ "macroeconomics", "economics", "modeling", "simulation", "forecasting", "dsge",]
dependencies = [ "numpy >= 2.1", "scipy >= 1.14.1", "python-dateutil >= 2.9.0", "plotly >= 6.3", "Jinja2 >= 3.1.4", "parsimonious >= 0.10", "prettytable >= 3.10", "pandas >= 2.1.2", "dill >= 0.3.8", "requests >= 2.31.0", "neqs >= 0.9.0", "documark >= 0.4.0", "daqp >= 0.6.0",]
[[project.authors]]
name = "Jaromir Benes"
email = "jaromir.benes@gmail.com"

[project.license]
text = "OGResearch Developer License 1.0"

[project.urls]
Homepage = "https://github.com/iris-solutions-team/irispie"
Documentation = "https://iris-solutions-team.github.io/irispie-pages"
"Bug Tracker" = "https://github.com/iris-solutions-team/irispie/issues"

[tool.hatch.build.targets.wheel]
packages = [ "src/irispie",]

[tool.hatch.build.targets.sdist]
include = [ "src/irispie", "README.md", "LICENSE", "NOTICE",]
